# Calorie-Expenditure-Prediction

./: .gitignore  README.md  pyproject.toml
src/: compare.py  model.py  predict.py  rmsle_loss.py  test.py  train.py  workout_dataset.py
src/charts/: corr.py  scatter.py
src/config/: config.yaml  config_compare.yaml
tests/: test_model.py
